--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@internationalized/date": "^3.8.0",
     "@nuxt/icon": "1.12.0",
     "@nuxt/ui": "^3.0.2",
     "@prisma/client": "^6.6.0",
@@ -18,7 +19,8 @@
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.3"
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971",
   "devDependencies": {
