--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://gen_user:qwerty123@147.45.249.242:3306/clinic"
+NUXT_SESSION_PASSWORD=25254d20cc4649418e2b905bf8845e4f
