--- a/package.json
+++ b/package.json
@@ -15,9 +15,18 @@
     "@nuxt/icon": "1.12.0",
     "@nuxt/ui": "^3.0.2",
     "@prisma/client": "^6.6.0",
+    "@prisma/nuxt": "^0.3.0",
     "@tailwindcss/vite": "^4.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.503.0",
     "nuxt": "^3.16.2",
+    "nuxt-auth-utils": "0.5.20",
+    "reka-ui": "^2.2.0",
+    "std-env": "^3.9.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "zod": "^3.24.3"
