--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="mysql://gen_user:qwerty123@147.45.249.242:3306/clinic"
 NUXT_SESSION_PASSWORD=25254d20cc4649418e2b905bf8845e4f
+NODE_ENV="production"
