--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "npx prisma generate && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "seed": "node prisma/seed.js"
+    "prisma:inline": "xcopy /Y /Q .\\node_modules\\@prisma\\client\\*.js .\\node_modules\\@prisma\\client\\",
+    "prisma:generate": "prisma generate && pnpm run prisma:inline"
   },
   "dependencies": {
     "@internationalized/date": "^3.8.0",
     "@nuxt/icon": "1.12.0",
     "@nuxt/ui": "^3.0.2",
-    "@prisma/client": "^6.6.0",
-    "@prisma/nuxt": "^0.3.0",
+    "@prisma/client": "6.6.0",
     "@tailwindcss/vite": "^4.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +34,6 @@
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971",
   "devDependencies": {
     "prettier": "^3.5.3",
-    "prisma": "^6.6.0"
+    "prisma": "6.6.0"
   }
 }
