--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "prisma:inline": "xcopy /Y /Q .\\node_modules\\@prisma\\client\\*.js .\\node_modules\\@prisma\\client\\",
-    "prisma:generate": "prisma generate && pnpm run prisma:inline"
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@internationalized/date": "^3.8.0",
@@ -17,6 +16,7 @@
     "@nuxt/ui": "^3.0.2",
     "@prisma/client": "6.6.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@vueuse/core": "^13.1.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
