add beta version admin panel

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 DATABASE_URL="mysql://gen_user:qwerty123@147.45.249.242:3306/clinic"
 NUXT_SESSION_PASSWORD=25254d20cc4649418e2b905bf8845e4f
 NODE_ENV="production"
+NUXT_PUBLIC_API_BASE='http://localhost:8080/api'
