--- a/package.json
+++ b/package.json
@@ -14,22 +14,24 @@
     "@internationalized/date": "^3.8.0",
     "@nuxt/icon": "1.12.0",
     "@nuxt/ui": "^3.0.2",
+    "@pinia/nuxt": "0.11.0",
     "@prisma/client": "6.6.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^13.1.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.503.0",
     "nuxt": "^3.16.2",
-    "nuxt-auth-utils": "0.5.20",
+    "pinia": "^3.0.2",
     "reka-ui": "^2.2.0",
-    "std-env": "^3.9.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^3.24.3"
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971",
